# Trinary

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  build.ps1  build.sh  pyproject.toml  trinary-tripy-architecture.md  trinary.bat  tripy.bat
.github/workflows/: ci.yml  lint.yml
benchmarks/: README.md  baseline.json  bench_engine.c  elite_lang_bench.py  elite_results.json  elite_results.md  perf_gate.py
benchmarks/tests/: test_perf_gate.py
cmake/: README.md
docs/: README.md
engine/: CMakeLists.txt  README.md
engine/asm/aarch64/: README.md
engine/asm/x86_64/: braincore_u8_avx2.S  harding_gate_i16_avx2.S  lattice_flip_avx2.S
engine/compiler/: ir.c  ir.h  lexer.c  optimizer.c  optimizer.h  parser.c  sema.c  sema.h  tri_frontend.h  tri_lang.c
engine/include/trinary/: trinary.h
engine/src/: allocator.c  braincore_scalar.c  capi.c  cpuid.c  dispatch.c  harding_gate_scalar.c  lattice_flip_scalar.c  main.c  prime_sieve_scalar.c  rng.c  rotor_cl4_avx2.c  rotor_cl4_scalar.c  timing.c  version.c
engine/tests/: test_kernels.c
language/examples/: braincore.tri  hello.tri  lattice_flip.tri  prime.tri
language/spec/: grammar.ebnf
language/stdlib/: README.md
scripts/: install_trinary.ps1  install_trinary.sh  install_tripy.ps1  install_tripy.sh  release_check.ps1  release_check.sh  run_tests.ps1  vcenv.ps1
tools/: README.md
tools/tri-bench/: README.md
tools/tri-fmt/: README.md
tools/tri-lsp/: README.md
tools/zig/doc/: langref.html
tripy/: README.md  pyproject.toml
tripy/src/_core/: module.c
tripy/src/tripy/: __init__.py  _core.pyi  cli.py  jit.py  runtime.py
tripy/tests/: conftest.py  test_smoke.py
