[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripy"
version = "0.1.0"
description = "Python front-end for the Trinary machine-code engine."
authors = [{ name = "Daniel Harding", email = "daniel@romanailabs.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "RomanAILabs Business Source License 1.1 (RBSL 1.1)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.scripts]
tripy = "tripy.cli:main"

[project.urls]
Homepage = "https://github.com/romanailabs/trinary"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["tripy"]
include-package-data = true

[tool.setuptools.package-data]
tripy = ["py.typed", "_core.pyi", "*.pyd", "*.so"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S603", "S607"]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["tripy"]
mypy_path = "src"
